--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -50,3 +50,10 @@ h2 {
 h3 {
   @apply text-xl;
 }
+
+main {
+  display: grid;
+  grid-template-columns: 200px 1fr;
+  grid-template-rows: min-content 1fr;
+  gap: 12px;
+}
